Text color is correct inside input in dark mode

--- a/app/staticfiles/css/main.css
+++ b/app/staticfiles/css/main.css
@@ -786,7 +786,7 @@ a.hidden-link {
     small,
     .word-count,
     label,
-
+    input,
   ) {
   color: var(--secondary-color);
 }
